--- a/Farmaluxa/sharedutil/src/main/res/values/strings.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/strings.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="str_welcome">Bienvenido</string>
+    <string name="str_login">Inicia sesión para comenzar</string>
+    <string name="str_user">Usuario</string>
+
+</resources>
