--- a/Farmaluxa/sharedutil/src/main/res/values/strings.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    LOGIN-->
+    <string name="app_name">Farmaluxa</string>
+
+    <!-- LOGIN -->
     <string name="str_welcome">Bienvenido</string>
     <string name="str_login_title">Inicia sesión para comenzar</string>
     <string name="str_user">Usuario</string>
@@ -9,5 +11,8 @@
     <string name="whatsapp_is_not_installed">WhatsApp no está instalado</string>
     <string name="str_not_account">¿No tienes una cuenta? <font fgcolor='#5C84FF'>Registrate</font></string>
 
+    <!-- HEADER_REQUISITION -->
+    <string name="desc_menu">Menú requisición</string>
+    <string name="desc_add_products">Agregar productos</string>
 
 </resources>
