Implementacion Vista Filtrado de Operaciones

--- a/Farmaluxa/sharedutil/src/main/res/values/strings.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 <!--    ALERT DIALOG-->
     <string name="str_title_alert">Aviso</string>
     <string name="str_cancel">Cancelar</string>
+    <string name="str_accept">Aceptar</string>
 
     <!-- LOGIN -->
     <string name="str_welcome">Bienvenido</string>
@@ -32,8 +33,6 @@
     <string name="desc_menu">Menú requisición</string>
     <string name="desc_add_products">Agregar productos</string>
     <string name="desc_advanced_filter">Aplicar otro filtro</string>
-
-    <string name="hint_search_requisition">Buscar Requisiciones</string>
 
     <!-- NAVIGATION_DRAWER -->
     <string name="str_close_app">Cerrar sesión</string>
